--- a/index.html
+++ b/index.html
@@ -5,55 +5,69 @@
         <title>Queens Regnant</title>
     </head>
     <body>
-        <header>
-            <h2>Empowering Women Everywhere</h2>
-            <h1>Queens Regnant</h1>
-        </header>
-        <section id="about">
-            <h3>About This Site</h3>
-            <p>Proin pretium aliquam est eget consequat. Nunc tellus mauris, lobortis a convallis vitae, mollis in eros. Sed non enim non nulla elementum consequat. Ut a efficitur sem. Sed lobortis, dui vitae luctus aliquet, odio magna ultricies lacus, et molestie sapien tellus nec mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Pellentesque a finibus mauris, non fringilla ipsum. Donec accumsan arcu tellus. Suspendisse feugiat condimentum dapibus. Etiam sit amet convallis turpis. Morbi eu sodales erat. Maecenas quis est magna. Donec vel velit et purus dapibus placerat. Duis magna augue, tincidunt et gravida ut, auctor nec dui. Ut mattis malesuada facilisis. Vestibulum nec tortor ultrices, malesuada tortor at, placerat nunc.</p>
-            <div class="button">
-                <a class="btn" href="https://youtu.be/dQw4w9WgXcQ" target="_blank">RESOURCES</a><a class="btn" href="https://youtu.be/fC7oUOUEEi4" target="_blank">STORIES</a>
-            </div>
-        </section>
-        <section>
-            <figure>
-                <img id="malala" src="images/1200px-Malala_Yousafzai.jpg" width="300px" height="200px">
-            </figure>
-            <figcaption>
-                <p>Malala Yousafzai<br>Pakistani activist for female education, Nobel Prize laureate</p>
-                <p class="quote">“When the whole world is silent, even one voice becomes powerful.”</p>
-            </figcaption>
-            <p>Aenean lectus augue, mattis a volutpat a, pellentesque eleifend erat. Nulla eu gravida lacus, ut lacinia leo. Vivamus finibus ultricies mauris ut venenatis. Sed in ante ut neque euismod bibendum id eget elit. Pellentesque rhoncus feugiat orci, sed rhoncus orci sodales sed. Praesent pretium mauris magna, quis vestibulum tortor accumsan a. Etiam molestie, sem rutrum ullamcorper dignissim, velit diam ullamcorper ligula, nec malesuada erat nunc eu neque. Curabitur finibus augue sed blandit iaculis. Quisque at dictum tellus. Sed leo purus, rutrum in nisl eget, fermentum auctor nibh. Suspendisse pharetra elementum dapibus. Suspendisse eget nibh massa. In lacinia porta venenatis. Pellentesque eget luctus risus, sed molestie eros. Donec pretium sodales elit id vehicula.</p>
-            <div class="link">
-                <a class="link" href="#">Read More>>></a>
-            </div>
-        </section>
-        <div>
-            <h2 id="quote-bar">“Nothing can dim the light that shines from within.”- Maya Angelou</h2>
+        <div id="top">
+            <header>
+                <h2 class="header">Empowering Women Everywhere</h2>
+                <h1>Queens Regnant</h1>
+                <p>HOME&#9660; <span style="font-weight: bolder; text-decoration: underline;">FEATURED</span>&#9660; COMMUNITY&#9660; RESOURCES&#9660; MORE&#9660;</p>
+            </header>
+            <section id="about">
+                <h3>About This Page</h3>
+                <p>Proin pretium aliquam est eget consequat. Nunc tellus mauris, lobortis a convallis vitae, mollis in eros. Sed non enim non nulla elementum consequat. Ut a efficitur sem. Sed lobortis, dui vitae luctus aliquet, odio magna ultricies lacus, et molestie sapien tellus nec mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Pellentesque a finibus mauris, non fringilla ipsum. Donec accumsan arcu tellus. Suspendisse feugiat condimentum dapibus. Etiam sit amet convallis turpis. Morbi eu sodales erat. Maecenas quis est magna. Donec vel velit et purus dapibus placerat. Duis magna augue, tincidunt et gravida ut, auctor nec dui. Ut mattis malesuada facilisis. Vestibulum nec tortor ultrices, malesuada tortor at, placerat nunc.</p>
+                <div class="button">
+                    <a class="btn" href="https://youtu.be/dQw4w9WgXcQ" target="_blank">INTERVIEWS</a><a class="btn" href="https://youtu.be/fC7oUOUEEi4" target="_blank">STORIES</a>
+                </div>
+            </section>
+            <section>
+                <figure>
+                    <img id="malala" src="images/1200px-Malala_Yousafzai.jpg" width="300px" height="200px" alt="Malala Yousafzai">
+                </figure>
+                <figcaption>
+                    <p>Malala Yousafzai<br>Pakistani activist for female education, Nobel Prize laureate</p>
+                    <p class="quote">“When the whole world is silent, even one voice becomes powerful.”</p>
+                </figcaption>
+                <p>Aenean lectus augue, mattis a volutpat a, pellentesque eleifend erat. Nulla eu gravida lacus, ut lacinia leo. Vivamus finibus ultricies mauris ut venenatis. Sed in ante ut neque euismod bibendum id eget elit. Pellentesque rhoncus feugiat orci, sed rhoncus orci sodales sed. Praesent pretium mauris magna, quis vestibulum tortor accumsan a. Etiam molestie, sem rutrum ullamcorper dignissim, velit diam ullamcorper ligula, nec malesuada erat nunc eu neque. Curabitur finibus augue sed blandit iaculis. Quisque at dictum tellus. Sed leo purus, rutrum in nisl eget, fermentum auctor nibh. Suspendisse pharetra elementum dapibus. Suspendisse eget nibh massa. In lacinia porta venenatis. Pellentesque eget luctus risus, sed molestie eros. Donec pretium sodales elit id vehicula.</p>
+                <div class="link">
+                    <a class="link" href="#">Read More>>></a>
+                </div>
+            </section><br>
         </div>
-        <section>
-            <figure>
-                <img src="">
-            </figure>
-            <figcaption></figcaption>
-            <p></p>
-            <div class="link">
-                <a class="link" href="#">Read More>>></a>
-            </div>
-        </section>
-        <section>
-            <figure>
-                <img src="">
-            </figure>
-            <figcaption></figcaption>
-            <p></p>
-            <div class="link">
-                <a class="link" href="#">Read More>>></a>
-            </div>
-        </section>
-        <footer>
-            
-        </footer>
+        <div id="bottom">
+            <div >
+                <h2 class="middle">“Nothing can dim the light that shines from within.”- Maya Angelou</h2>
+            </div><br>
+            <section>
+                <figure>
+                    <img src="images/AOC.jpeg" height="200px" alt="Alexandria Ocasio-Cortez">
+                </figure>
+                <figcaption>
+                    <p>Alexandria Ocasio-Cortez<br>American politician, U.S. Representative</p>
+                    <p class="quote">"I just hope that more people will ignore the fatalism of the argument that we are beyond repair. We are not beyond repair. We are never beyond repair."</p>
+                </figcaption>
+                <p>Curabitur a arcu felis. Donec aliquet ante sed augue euismod, at dapibus est suscipit. Fusce ultricies urna in lorem volutpat, vitae mollis est finibus. Sed consectetur tortor at diam vulputate dictum. Suspendisse eu metus sit amet massa tempor tempus ac vitae lorem. Vivamus elit arcu, suscipit a egestas at, pretium mattis ligula. Ut iaculis luctus nibh quis imperdiet. Vivamus enim lectus, convallis pellentesque imperdiet at, ornare sed enim. Praesent volutpat a sapien id egestas. Nulla a sapien ipsum. Duis sed efficitur purus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus libero dui, fringilla eu lectus in, condimentum porttitor urna. Nulla hendrerit accumsan mi et viverra.</p>
+                <div class="link">
+                    <a class="link" href="#">Read More>>></a>
+                </div>
+            </section>
+            <section>
+                <figure>
+                    <img src="images/Angela_Davis_pic.jpg" height="200px" alt="Angela Davis">
+                </figure>
+                <figcaption>
+                    <p>Angela Davis<br>American political activist, philosopher, academic, author</p>
+                    <p class="quote">“I am no longer accepting the things I cannot change. I am changing the things I cannot accept.”</p>
+                </figcaption>
+                <p>Vivamus ante diam, tristique eu turpis non, cursus accumsan tortor. Aenean est nunc, venenatis non gravida in, semper sit amet velit. Nam pharetra et magna quis vulputate. Proin nunc lacus, egestas ac odio eu, semper volutpat tellus. Nam molestie odio sed enim cursus facilisis. Sed auctor ac metus eget porttitor. Ut efficitur placerat auctor. Donec volutpat nisi a nisi volutpat porttitor. Integer posuere, libero at blandit consectetur, ligula odio feugiat urna, laoreet cursus lacus ipsum at mauris. Fusce eu erat orci. Vestibulum venenatis nisl dignissim consequat scelerisque. Nullam quis euismod erat, sed finibus enim.</p>
+                <div class="link">
+                    <a class="link" href="#">Read More>>></a>
+                </div>
+            </section>
+            <div id="num-bar">
+                <p> < 10 &nbsp;11 &nbsp;12 &nbsp;13 &nbsp;14 &nbsp;15 &nbsp;16 &nbsp;17 &nbsp;18 &nbsp;19 &nbsp;| RANDOM |&nbsp; 20&nbsp; <span style="color: purple; text-decoration: underline;">21</span>&nbsp; 22&nbsp; 23&nbsp; 24&nbsp; 25&nbsp; 26&nbsp; 27&nbsp; 28&nbsp; 29&nbsp; > </p>
+            </div><br>
+            <footer>
+                <p> |&nbsp;Meet The Team &nbsp;|&nbsp; Contact Us &nbsp;|&nbsp; Our Socials &nbsp;|&nbsp; Become A Member &nbsp;|&nbsp; Help Support Us&nbsp;| </p>
+            </footer>    
+        </div>
     </body>
 </html>
